--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -20,11 +20,11 @@ html {
 
 body {
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 section {
   height: 100vh;
-  scroll-snap-align: start;
   background-color: #f2f2f2;
 }
 
